# commondata

./: README.md  README.rst  fabfile.py  make_code.py  pyproject.toml  setup.py  tasks.py  tests.py
commondata/: __init__.py  countries.py  peppolcodes.py  utils.py  utils.py~
commondata/demonames/: african.py  bel.py  est.py  french.py  muslim.py  russian.py  streets.py  ury.py
commondata/places/: estonia.py
tests/: test_readme.py
